src/objects/AdditionalProductLoginFields__c.object
<CustomObject>
    <description>SFDC1-7972 This is a separate object created for capturing additional product login fields which are more specific to the product requirement. Many of these fields are originated from L-Markit.</description>
    <fields>
        <fullName>BloombergDemo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Specifies if the user received MSF demo via Bloomberg (1 day only)</description>
        <inlineHelpText>Tick mark if the client received the demo (1 day only)</inlineHelpText>
        <label>Bloomberg Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BloombergSN__c</fullName>
        <description>SFDC1-4386 ID for permissioning Bloomberg terminal (by serial number)</description>
        <inlineHelpText>Update Field as per user&apos;s S/N on bloomberg terminal (by serial number)</inlineHelpText>
        <label>Bloomberg S/N</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BloombergUUID__c</fullName>
        <description>SFDC1-4386 Unique Identification code per user in Bloomberg for permissioning purposes</description>
        <inlineHelpText>Unique Identification code per user in Bloomberg for permissioning purposes. Check bbg terminal for the user&apos;s UUID and update.</inlineHelpText>
        <label>Bloomberg UUID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIMEFields__c</fullName>
        <description>SFDC1-4386 Multi pick-list field which helps confirm access for DIME data via MSF Toolkit</description>
        <inlineHelpText>Include the field names that the client has access to for DIME Data via MSF Toolkit</inlineHelpText>
        <label>DIME Fields</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculations</fullName>
                </value>
                <value>
                    <fullName>Dividend</fullName>
                </value>
                <value>
                    <fullName>ETP Composition</fullName>
                </value>
                <value>
                    <fullName>ETP Encyclopaedia</fullName>
                </value>
                <value>
                    <fullName>Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataOnboardingContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Flag to identify the user as an MSF onboarding contact</description>
        <inlineHelpText>Tick the field if contact is providing us with MSF data</inlineHelpText>
        <label>Data Onboarding Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DatafeedDeliveryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Specifies if client is receiving data feed from the firm</description>
        <inlineHelpText>Tick field if the client is required to be notified for any datafeed updates</inlineHelpText>
        <label>Datafeed Delivery Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FileDeliveryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Specifies if contact for MSF client data if discrepancies found in data received</description>
        <inlineHelpText>Flag contact for MSF client data if discrepancies found in data received</inlineHelpText>
        <label>File Delivery Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Flag IT contact for assistance with toolkit installation, datafeed setups, and client onboarding</description>
        <inlineHelpText>Flag IT contact for assistance with toolkit installation, datafeed setups, and client onboarding</inlineHelpText>
        <label>IT Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastToolkitLogonDate__c</fullName>
        <description>SFDC1-4667 Specifies when a user last logged into Toolkit</description>
        <inlineHelpText>Specifies when a user last logged into Toolkit. Populated via integration</inlineHelpText>
        <label>Last Toolkit Logon Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Legacy Id field for Additional product login fields. It will be same as parent product login . Creating as part of migration exercise</description>
        <externalId>true</externalId>
        <inlineHelpText>Legacy Id field from source system</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSFASegment__c</fullName>
        <description>SFDC1-4386 Choose the most relevant option from the drop-down, this is provided by sales, which segments the user according to the industry within which they operate</description>
        <inlineHelpText>Choose the most relevant option from the drop-down, this is provided by sales, which segments the user according to the industry within which they operate</inlineHelpText>
        <label>MSFA Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Beneficial Owner</fullName>
                </value>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Central Bank</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Corporate/IR</fullName>
                </value>
                <value>
                    <fullName>Corporate Broker</fullName>
                </value>
                <value>
                    <fullName>Hedge Fund</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Markit Group</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Prop Desk</fullName>
                </value>
                <value>
                    <fullName>Quant Group</fullName>
                </value>
                <value>
                    <fullName>Regulator</fullName>
                </value>
                <value>
                    <fullName>Research</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Sales Trading</fullName>
                </value>
                <value>
                    <fullName>Third Party</fullName>
                </value>
                <value>
                    <fullName>Underlying Client</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFCurrency__c</fullName>
        <description>SFDC1-4386 Used in conjunction with values from &quot;MSF data type&quot; for Repo data, (no dependency)</description>
        <inlineHelpText>Used in conjunction with values from &quot;MSF data type&quot; for Repo data, (no dependency)</inlineHelpText>
        <label>MSF Currency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Specifies if the client is an MSF live user</description>
        <inlineHelpText>Tick if the client is an MSF live user</inlineHelpText>
        <label>MSF Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MSFDataType__c</fullName>
        <description>SFDC1-4386 Specifies any additional data access for MSF</description>
        <inlineHelpText>Additional data access for MSF</inlineHelpText>
        <label>MSF Data Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bond Pricing</fullName>
                </value>
                <value>
                    <fullName>Client Broker to Broker</fullName>
                </value>
                <value>
                    <fullName>Client Collateral</fullName>
                </value>
                <value>
                    <fullName>Client Exclusives</fullName>
                </value>
                <value>
                    <fullName>Client Pending</fullName>
                </value>
                <value>
                    <fullName>Group Broker to Broker</fullName>
                </value>
                <value>
                    <fullName>Group Exclusives</fullName>
                </value>
                <value>
                    <fullName>Group Intraday</fullName>
                </value>
                <value>
                    <fullName>Group Pending</fullName>
                </value>
                <value>
                    <fullName>Repo Markets</fullName>
                </value>
                <value>
                    <fullName>Repo Rate</fullName>
                </value>
                <value>
                    <fullName>Repo Securities</fullName>
                </value>
                <value>
                    <fullName>Repo Trading</fullName>
                </value>
                <value>
                    <fullName>Research Signals Short Squeeze Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFIdentifiers__c</fullName>
        <description>SFDC1-4386 If a user has either / both of these permissions enabled they cannot see CUSIPS and/or SEDOLS in any MSF platform</description>
        <inlineHelpText>If a user has either / both of these permissions enabled they cannot see CUSIPS and/or SEDOLS in any MSF platform</inlineHelpText>
        <label>MSF Identifiers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No CUSIPs</fullName>
                </value>
                <value>
                    <fullName>No SEDOLs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MSFInstrumentType__c</fullName>
        <description>SFDC1-4386 Denotes whether a user is licensed to have data for bonds, equities or both</description>
        <inlineHelpText>Denotes whether a user is licensed to have data for bonds, equities or both</inlineHelpText>
        <label>MSF Instrument Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bonds and Equities</fullName>
                </value>
                <value>
                    <fullName>Bonds Only</fullName>
                </value>
                <value>
                    <fullName>Equities Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductLogin__c</fullName>
        <description>SFDC1-6347: Parent of Additional Product Login Information.</description>
        <inlineHelpText>Parent of Additional Product Login Information.</inlineHelpText>
        <label>Product Login</label>
        <referenceTo>ProductLogin__c</referenceTo>
        <relationshipLabel>Additional Product Login Fields</relationshipLabel>
        <relationshipName>AdditionalProductLoginFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductUser__c</fullName>
        <description>SFDC1-4386 Denotes whether a user is licensed under a live, active contract</description>
        <inlineHelpText>Denotes whether a user is licensed under a live, active contract</inlineHelpText>
        <label>Product User</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignOffContact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-4386 Used by content ops to identify a client who can sign off the data submitted to MSF on behalf of their organization</description>
        <inlineHelpText>Used by content ops to identify a client who can sign off the data submitted to MSF on behalf of their organization</inlineHelpText>
        <label>Sign Off Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubscriptionType__c</fullName>
        <description>SFDC1-8498 : This field will be used to hold the values for Subscription Type</description>
        <inlineHelpText>Enter value for Subscription Type</inlineHelpText>
        <label>Subscription Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>REPO FED ADM</fullName>
                </value>
                <value>
                    <fullName>REPO DTCC GCF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ToolkitVersion__c</fullName>
        <description>SFDC1-4667 The version of the Toolkit</description>
        <inlineHelpText>The version of the Toolkit</inlineHelpText>
        <label>Toolkit Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrialProduct__c</fullName>
        <description>SFDC1-4386 Dependent on the trial tick box, (becomes mandatory once Trial tick box is flagged). Shows the combination MSF products on trial at any given point in time (real time).</description>
        <inlineHelpText>Dependent on the trial tick box, (becomes mandatory once Trial tick box is flagged). Shows the combination MSF products on trial at any given point in time (real time).</inlineHelpText>
        <label>Trial Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager Data</fullName>
                </value>
                <value>
                    <fullName>Benchmarking Data</fullName>
                </value>
                <value>
                    <fullName>Bloomberg without Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Bloomberg with Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Buyside Toolkit without Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Buyside Toolkit with Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Capital IQ without Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Capital IQ with Retail Fee</fullName>
                </value>
                <value>
                    <fullName>Capital IQ Xpressfeed</fullName>
                </value>
                <value>
                    <fullName>Datafeed - S/FTP</fullName>
                </value>
                <value>
                    <fullName>Datafeed - WTC</fullName>
                </value>
                <value>
                    <fullName>Deltix</fullName>
                </value>
                <value>
                    <fullName>Direct Edge</fullName>
                </value>
                <value>
                    <fullName>Dividend Data</fullName>
                </value>
                <value>
                    <fullName>DX Open</fullName>
                </value>
                <value>
                    <fullName>Evaluation Explorer</fullName>
                </value>
                <value>
                    <fullName>FactSet without Retail Fee</fullName>
                </value>
                <value>
                    <fullName>FactSet with Retail Fee</fullName>
                </value>
                <value>
                    <fullName>International Index Explorer</fullName>
                </value>
                <value>
                    <fullName>iPhone Buyside</fullName>
                </value>
                <value>
                    <fullName>iPhone Sellside</fullName>
                </value>
                <value>
                    <fullName>iPhone Sellside SF</fullName>
                </value>
                <value>
                    <fullName>iPhone Wholesale</fullName>
                </value>
                <value>
                    <fullName>PBPX</fullName>
                </value>
                <value>
                    <fullName>Performance Explorer</fullName>
                </value>
                <value>
                    <fullName>Performance Explorer - Lite</fullName>
                </value>
                <value>
                    <fullName>Performance Explorer - Sign Off</fullName>
                </value>
                <value>
                    <fullName>Risk Explorer</fullName>
                </value>
                <value>
                    <fullName>Sellside Toolkit</fullName>
                </value>
                <value>
                    <fullName>SS Securities Finance Toolkit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>SFDC1-6785 Username or Login name for this user. This is copied over from Product Login via workflow</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique username or login name for this user automatically copied over from Product Login via workflow</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Additional Product Login Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Additional Product Login Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Product Login Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>